# hotweights

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  idea.md  pyproject.toml
.github/workflows/: ci.yml
bench/: bench_e2e.py  bench_replicate.py
dashboards/: hotweights.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRESETS.md  TP_GROUPS.md  TUNING.md  VALIDATION.md  VENDOR_SETUP.md  VLLM_INTEGRATION.md  WALKTHROUGHS.md
example_ckpt/: checkpoint.manifest.json
examples/: gpu_broadcast_smoke.py  plan_and_replicate.sh  trainer_demo.py  vllm_extension_register.py  vllm_plugin_demo.py  vllm_smoke_demo.py
hotweights/: __init__.py  cli.py  config.py  manifest.py  planner_bodo.py  planner_donor.py
hotweights/adapters/: __init__.py  base.py  kv_cache_migration.py  optimizer_sync.py  trainer_swap.py  vllm_auto.py  vllm_bind.py  vllm_ext.py  vllm_extension.py  vllm_pause.py  vllm_plugin.py  vllm_register_010.py
hotweights/cli_wizards/: __init__.py  mapping_wizard.py
hotweights/coordinator/: __init__.py  client.py  fastapi_app.py  ha_control_plane.py  server.py  zmq_client.py  zmq_server.py
hotweights/core/: errors.py  replicate.py  schemas.py
hotweights/staging/: __init__.py  base.py  cuda_ipc_agent.py  gpu_agent.py  host_agent.py
hotweights/telemetry/: __init__.py  cuda_ipc_metrics.py  logging.py  metrics.py  metrics_server.py  nvml.py  prom.py
hotweights/transport/: __init__.py  base.py  cuda_ipc.py  donor_select.py  gds_storage.py  gpu_broadcast.py  mpi_stream.py  nccl_stream.py  p2p.py  topology_scheduler.py  transport_manager.py  ucx_p2p.py  ucx_stream.py
hotweights/utils/: dist.py  env.py  mapping_wizard.py  selection.py  torch_utils.py
hotweights/worker/: __init__.py  agent.py
scripts/: bringup_demo.sh  preset_env_nvlink.sh  preset_env_pcie.sh  preset_env_redis.sh  run_ucx_broadcast_demo.sh  run_worker_ucx_demo.sh
tests/: test_adapter_bind_module.py  test_cli_token.py  test_cuda_ipc_agent_utils.py  test_cuda_ipc_window.py  test_donor_select.py  test_donors.py  test_endpoint_derivation.py  test_env_utils.py  test_fastapi_app.py  test_gpu_broadcast_logic.py  test_hierarchical_handles.py  test_infer_name_map.py  test_kv_and_gds.py  test_manifest.py  test_plan_and_replicate.py  test_plan_from_current.py  test_planner.py  test_selection_cpu.py  test_transport_preference.py  test_verify_plan_core.py  test_vllm_adapter_stub.py  test_vllm_auto.py  test_vllm_pause.py  test_vllm_plugin_apply.py  test_worker_agent.py
