[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotweights"
version = "0.0.1"
description = "Fast, versioned weight updates for LLM serving and training"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [{ name = "Hotweights Contributors" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "typing_extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
  "black>=24.1.0",
  "mypy>=1.7.0",
]
extras = [
  "pyzmq>=25.1.0",
  "mpi4py>=3.1.4",
  "ucx-py>=0.35.0",
  "prometheus-client>=0.20.0",
]
api = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
]

[project.scripts]
hotweights = "hotweights.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "N", "W", "C90"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
# Relax rules for examples, benches, and tests
"examples/*.py" = ["ANN", "E501", "I001", "B010", "E402", "F401"]
"bench/*.py" = ["ANN", "E501", "C901", "I001", "F401"]
"tests/*.py" = ["ANN", "E501", "F401", "I001", "E702", "E741", "F841"]
"hotweights/transport/ucx_stream.py" = ["E501", "C901", "I001", "UP006", "UP035", "B007"]
"hotweights/transport/ucx_p2p.py" = ["E501", "I001", "UP006", "UP012", "ANN202"]
"hotweights/worker/agent.py" = ["E501", "W293", "I001", "UP007"]
"hotweights/transport/transport_manager.py" = [
  "E501", "I001", "W293", "UP006", "UP007", "ANN", "B904", "E722", "B007"
]
"hotweights/adapters/vllm_bind.py" = ["E501", "I001", "B010", "ANN001"]
"hotweights/adapters/vllm_ext.py" = ["E501", "I001", "N801", "ANN001"]
"hotweights/adapters/vllm_extension.py" = ["E501", "I001", "UP006", "UP035", "ANN", "F401", "E402"]
"hotweights/adapters/vllm_plugin.py" = ["E501", "I001", "UP006", "UP035", "ANN", "C901", "F401"]
"hotweights/adapters/vllm_pause.py" = ["E501", "I001", "UP006", "ANN", "C901"]
"hotweights/adapters/vllm_register_010.py" = ["E501", "I001", "UP006", "UP035", "ANN"]
"hotweights/adapters/kv_cache_migration.py" = ["E501", "W293", "UP007", "UP037", "N803"]
"hotweights/adapters/optimizer_sync.py" = ["E501", "C901", "UP007", "UP037"]

[tool.ruff.lint.isort]
known-first-party = ["hotweights"]

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

# Restrict package discovery to the library only (avoid examples/tests/etc.).
[tool.setuptools.packages.find]
include = ["hotweights*"]
exclude = [
  "tests*",
  "examples*",
  "bench*",
  "docs*",
  "scripts*",
  "dashboards*",
  "demo_ckpt_*",
  "example_ckpt*",
]
